--- a/index.html
+++ b/index.html
@@ -1,40 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>_</head>
-<body> {
-        background-color: #2A2734#
-        }
-        .cube {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%,  -50%) rotate(0deg);
-            animation: anim 2s infinite ease-out;
-            box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(
-                0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.12), 0 16px 16px rgba(0, 0, 0, 0.12);
-        }
-        .outercube {
-            width: 10ww;
-            height: 10ww;
-            background-color: #9B87FE;
-        }
-        .innerCube {
-            width: 5ww;
-            height: 5ww;
-            background-color: #C2BEDB;
-        }
-        .innerCube2 {
-            width: 2ww;
-            height: 2ww;
-            background-color: #FFB879;
-        }
-        @keyframes anim{
-            0% {
-                transform: translate(-50%, -50%)rotate(0deg);
-            }
-            100% {
-                transform: translate(-50%, -50%)rotate(90deg);
-            }
-        }
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Cube.css">
+    <title>Login</title>
+
+</head>
+<body>
+    <div class="outercube cube">
+        <div class ="innerCube cube">
+            <div class="innerCube2 cube"></div>
+         </div>
+    </di>
 </body>
 </html>
